# livnium-engine

./: .gitignore  LICENSE  README.md  architecture.md  pyproject.toml
.github/workflows/: tests.yml
docs/: PHASE3.md  PHASE4.md
results/phase3_test_run/: phase3_summary.json
scripts/: explore_demo.py  explore_local_demo.py  phase2_report.py  phase3_report.py  phase4_report.py
src/livnium_engine/: __init__.py
src/livnium_engine/core/: __init__.py  coords.py  engine.py  rotations.py
src/livnium_engine/docs/: PHASE1.md  PHASE2.md  __init__.py
src/livnium_engine/energy/: __init__.py  energies.py
src/livnium_engine/explorer/: __init__.py  anneal_local.py  random_local_walk.py  random_walk.py  recovery.py
src/livnium_engine/invariants/: __init__.py  rotation_group.py
src/livnium_engine/viz/: __init__.py  plot.py
tests/: conftest.py  test_audit.py  test_local_ops.py  test_rotations.py
