[project]
name = "livnium-engine"
version = "0.1.0"
description = "Livnium Engine — reversible lattice dynamics substrate"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
